tests/baselines/reference/parserErrorRecovery_ParameterList2(strict=true).errors.txt
parserErrorRecovery_ParameterList2.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
parserErrorRecovery_ParameterList2.ts(1,10): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
parserErrorRecovery_ParameterList2.ts(1,12): error TS7006: Parameter 'a' implicitly has an 'any' type.
parserErrorRecovery_ParameterList2.ts(2,2): error TS1005: ')' expected.


==== parserErrorRecovery_ParameterList2.ts (4 errors) ====
    function f(a, {
             ~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
             ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
               ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }
     
!!! error TS1005: ')' expected.